Changes from Friday.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,22 @@
         </div>
 
         <div class="current">
-          <div class="weather-description {{city.current.description | lowercase}}"><span class="icon"></span><span class="description">{{city.current.description}}</span></div>
+          <div class="weather-description {{city.current.description | lowercase}}"><span class="icon">
+
+            <svg>
+  <path d="M231.9,132c-12.1,0-22,9.9-22,22c0,12.1,9.9,22,22,22c12.1,0,22-9.9,22-22C253.9,141.9,244.1,132,231.9,132z M231.9,168
+    c-7.7,0-14-6.3-14-14c0-7.7,6.3-14,14-14c7.7,0,14,6.3,14,14C245.9,161.7,239.7,168,231.9,168z"/>
+  <path d="M231.9,124.8c2.2,0,4-1.8,4-4v-8.1c0-2.2-1.8-4-4-4c-2.2,0-4,1.8-4,4v8.1C227.9,123,229.7,124.8,231.9,124.8z"/>
+  <path d="M273.3,150h-8.1c-2.2,0-4,1.8-4,4c0,2.2,1.8,4,4,4h8.1c2.2,0,4-1.8,4-4C277.3,151.8,275.6,150,273.3,150z"/>
+  <path d="M231.9,183.3c-2.2,0-4,1.8-4,4v8.1c0,2.2,1.8,4,4,4c2.2,0,4-1.8,4-4v-8.1C235.9,185.1,234.2,183.3,231.9,183.3z"/>
+  <path d="M202.7,154c0-2.2-1.8-4-4-4h-8.1c-2.2,0-4,1.8-4,4c0,2.2,1.8,4,4,4h8.1C200.9,158,202.7,156.2,202.7,154z"/>
+  <path d="M255.5,134.5c1,0,2-0.4,2.8-1.2l5.8-5.8c1.6-1.6,1.6-4.1,0-5.7c-1.6-1.6-4.1-1.6-5.7,0l-5.8,5.8c-1.6,1.6-1.6,4.1,0,5.7"/>
+  <path d="M258.3,174.7c-1.6-1.6-4.1-1.6-5.7,0c-1.6,1.6-1.6,4.1,0,5.7l5.8,5.8c0.8,0.8,1.8,1.2,2.8,1.2c1,0,2-0.4,2.8-1.2"/>
+  <path d="M205.6,174.7l-5.8,5.8c-1.6,1.6-1.6,4.1,0,5.7c0.8,0.8,1.8,1.2,2.8,1.2c1,0,2-0.4,2.8-1.2l5.8-5.8c1.6-1.6,1.6-4.1,0-5.7"/>
+  <path d="M205.6,133.3c0.8,0.8,1.8,1.2,2.8,1.2c1,0,2-0.4,2.8-1.2c1.6-1.6,1.6-4.1,0-5.7l-5.8-5.8c-1.6-1.6-4.1-1.6-5.7,0"/>
+            </svg>
+
+          </span><span class="description">{{city.current.description}}</span></div>
           <div class="weather-temp"><span class="num">{{city.current.temp}}</span>&#176;C</div>
         </div>
 
